--- a/css/modal.css
+++ b/css/modal.css
@@ -1,4 +1,18 @@
 /* === MODAL BASE === */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: fadeIn 0.3s ease-out;
+}
+
 .modal {
   position: fixed;
   top: 0;
